--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" type='module' defer></script>
     <title>Cadastro</title>
-    
+
 </head>
 <body>
     <main class="container">
-        <h1 class="title">Cadastro</h1>
+        <h1 class="title">Cadastre-se:</h1>
         <div class="row">
             <div class="inputbox">
                 <input type="text" id="nome" required>
