--- a/index.html
+++ b/index.html
@@ -12,47 +12,47 @@
 </head>
 <body>
     <main class="container">
-        <h1 class="title">Cadastre-se:</h1>
+        <h1 class="title">Cadastre-se</h1>
         <div class="row">
             <div class="inputbox">
                 <input type="text" id="nome" required>
-                <label for="nome">Nome</label>
+                <label for="nome">Nome:</label>
             </div>
             <div class="inputbox">
                 <input type="text" id="email"  required>
-                <label for="email">Email</label>
+                <label for="email">Email:</label>
             </div>
         </div>
         <div class="row">
             <div class="inputbox">
                 <input type="text" id="cep"  required>
-                <label for="cep">CEP</label>
+                <label for="cep">CEP:</label>
             </div>
             <div class="inputbox">
                 <input type="text" id="endereco"  required>
-                <label for="endereco">Endereço</label>
+                <label for="endereco">Endereço:</label>
             </div>
             <div class="inputbox">
                 <input type="text" id="numero"  required>
-                <label for="numero">Número</label>
+                <label for="numero">Número:</label>
             </div>
         </div>
         <div class="row">
             <div class="inputbox">
                 <input type="text" id="bairro"  required>
-                <label for="bairro">Bairro</label>
+                <label for="bairro">Bairro:</label>
             </div>
             <div class="inputbox">
                 <input type="text" id="cidade"  required>
-                <label for="cidade">Cidade</label>
+                <label for="cidade">Cidade:</label>
             </div>
             <div class="inputbox">
                 <input type="text" id="estado"  required>
-                <label for="estado">Estado</label>
+                <label for="estado">Estado:</label>
             </div>
         </div>
         <div class="row">
-            <button>Salvar</button>
+            <button>SALVAR</button>
         </div>
     </main>
     <footer>
