--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </main>
     <footer>
-        Myllena Bitar &#169 2025
+        Myllena Bitar &#169 2025. Todos os direitos reservados
     </footer>
 </body>
 </html>
